# tiangong-lca-audit-skills

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
docs/: architecture.md  asset-boundaries.md  case-storage.md  environment.md  tiangong-integration.md  workflow.md
skill/document-granular-decompose/: SKILL.md
skill/document-granular-decompose/references/: env.md  request-response.md
skill/document-granular-decompose/scripts/: mineru_fulltext_extract.py
skill/tiangong-lca-audit/: SKILL.md
skill/tiangong-lca-audit/agents/: openai.yaml
skill/tiangong-lca-audit/assets/: approval-report-template.docx  approval-report-template.md  audit-result-template.md  correction-record-template.md
skill/tiangong-lca-audit/references/: audit-policy.md  correction-policy.md  input-contract.md  model-audit.md  output-contract.md  platform-operations.md  process-audit.md  taxonomy-guide.md
skill/tiangong-lca-audit/rules/: common.json  guardrails.json  model.json  process.json  schema.json
src/tiangong_audit/: case_store.py  cli.py  process_pass_flow.py
src/tiangong_audit/contracts/: __init__.py  agent_review.py  case.py  (+3 more)
tests/: test_agent_review.py  test_assets.py  test_case_store.py  test_cli.py  test_content_hygiene.py  test_contracts.py  test_evals.py  test_intake_workflow.py  test_normalizer.py  test_process_pass_flow.py  test_rule_engine.py  test_rules.py  test_semantic_review_workflow.py  test_skill_contract.py  test_sources.py  test_tiangong_api.py  test_tidas_sdk.py
tests/evals/: audit-evaluation-cases.json
(+33 files in other folders)
